# chust

./: .gitignore  .todo  Cargo.toml  README.md
src/: arg_parser.rs  chess_detection.rs  drawing.rs  main.rs  play.rs  process.rs  stockfish.rs
src/input_capture/: input_capture_manager.rs  mod.rs  shmem.rs  wayland.rs
